--- a/Backend/ventas/src/main/resources/application.properties
+++ b/Backend/ventas/src/main/resources/application.properties
@@ -4,12 +4,19 @@
 spring.application.name=ventas
 
 # ========================
-# DATABASE CONFIG (VARIABLES DE ENTORNO)
+# DATABASE CONFIG (VARIABLES DE ENTORNO) - POSTGRESQL
 # ========================
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql}:${DB_PORT:3306}/${DB_NAME:Tacos}?useSSL=false&serverTimezone=America/Guatemala
-spring.datasource.username=${DB_USER:root}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:Tacos}
+spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:123}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ========================
+# JPA/HIBERNATE CONFIG
+# ========================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # ========================
 # TIMEZONE CONFIG
