correccion en el archivo nginx.config

--- a/Backend/ventas/src/main/resources/application.properties
+++ b/Backend/ventas/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=ventas
 # ========================
 # DATABASE CONFIG (VARIABLES DE ENTORNO) - POSTGRESQL
 # ========================
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:Tacos}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:Tacos}?sslmode=require
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:123}
 spring.datasource.driver-class-name=org.postgresql.Driver
