--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,4 +1,3 @@
-# Frontend/nginx.conf
 server {
     listen 80;
     server_name _;
@@ -10,17 +9,29 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Redirigir /api/ al backend
+    # Redirigir /api/ al backend EN RENDER
     location /api/ {
-        proxy_pass https://backend-tacontento-production.up.railway.app/api/;
-
-        proxy_set_header Host backend-tacontento-production.up.railway.app;
+        # URL de tu backend en Render
+        proxy_pass https://backend-proyecto-venta-2.onrender.com/api/;
+        
+        proxy_set_header Host backend-proyecto-venta-2.onrender.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-
-        proxy_ssl_server_name on;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Para CORS
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header Access-Control-Max-Age 1728000;
+            add_header Content-Type 'text/plain; charset=utf-8';
+            add_header Content-Length 0;
+            return 204;
+        }
     }
-
-
 }
