--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -9,29 +9,33 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Redirigir /api/ al backend EN RENDER
+    # Redirigir /api/ al backend - FORMA CORRECTA
     location /api/ {
-        # URL de tu backend en Render
-        proxy_pass https://backend-proyecto-venta-2.onrender.com/api/;
+        # IMPORTANTE: No agregues /api/ al final del proxy_pass
+        proxy_pass https://backend-proyecto-venta-2.onrender.com;
         
-        proxy_set_header Host backend-proyecto-venta-2.onrender.com;
+        # Headers críticos
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Para CORS
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        # Para CORS - el backend ya lo maneja
+        proxy_set_header Origin $http_origin;
         
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
+        # Timeouts para Render Free tier
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        
+        # Manejar WebSocket si lo necesitas
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Buffer
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
     }
 }
